--- a/mindme/templates/home.html
+++ b/mindme/templates/home.html
@@ -1,13 +1,41 @@
 {% extends "base.html" %}
 {% load static %}
 {% block content %}
-<div>
-    <div class="uk-width-1-1" style="background-color: #3F6E97; height: 60px;">
-        helo
-        <div></div>
+<div style="height: 91vh;">
+    <div class=" uk-grid" style="background-color: #3F6E97; height: 60px;">
+        <div class="uk-width-2-3 uk-grid">
+            <div><img src="{% static 'logo.png'%}" alt="" style="height: 55px; margin-left: 5vw;"></div>
+            <div style="padding-top: 15px; color: white; font-size: large;" class="uk-text-bold uk-text-medium hero-font" >MindMe</div>            
+        </div>
+        <div uk-grid class="synefont uk-text-bold" style="margin-top: 15px;">
+            <div><a href="{% url 'home'%}" class="nav-text">Home</a></div>
+            <div><a href="" class="nav-text">About</a></div>
+            <div><a href="{% url 'login'%}">
+                <div class="login">
+                    LOGIN
+                </div>
+            </a></div>
+        </div>
     </div>
-    <div>
-
+    <div style="background-color: #EBE8D5; height: 100%;">
+        <div uk-grid class="uk-width-1-1">
+            <div class="uk-width-1-2 uk-flex uk-flex-center" style="margin-top: 80px;">
+                <div><img src="{% static 'asthetic.png'%}" class="img-shadow" alt="" style="height: 400px;"></div>
+            </div>
+            <div class="uk-flex uk-flex-center">   
+                <div style="position: relative;">
+                    <div style="margin-top: 100px; font-size: 40px; " class="uk-text-bold hero-font">
+                        Embrace Wellness: Your Journey <br><div style="color: #E06B45;"> to Mental Health</div>
+                    </div>
+                    <div style="color: #959595;margin: 30px;" class="uk-text-bold synefont   "> See how you're feeling today. Answer <br> quick questions with images and gain <br> insights into your well-being.</div>
+                    <a href="{%url 'register'%}"><div class="get-started synefont" >Get Started</div></a>
+                </div>
+                
+            </div>
+        </div>
     </div>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 200" class="uk-position-bottom">
+        <path fill="#FE8181" fill-opacity="1" d="M0,96L40,101.3C80,107,160,117,240,138.7C320,160,400,192,480,186.7C560,181,640,139,720,112C800,85,880,75,960,101.3C1040,128,1120,192,1200,202.7C1280,213,1360,171,1400,149.3L1440,128L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"></path>
+      </svg>      
 </div>
 {% endblock content %}
