--- a/mindme/templates/register/register.html
+++ b/mindme/templates/register/register.html
@@ -1,14 +1,35 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Register</title>
-</head>
-<body>
-    <h2>Register</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Register</button>
-    </form>
-</body>
-</html>
+{% extends "base.html" %}
+{% load static %}
+{% block content %}
+
+    <div class="uk-grid" style="background-color: #FE8181; height: 100vh;">
+        <div class="uk-position-center" style="background-color: #EBE8D5; border-radius: 60px; width: 400px;height: auto; padding: 0px;">
+            <div>
+                <img class="uk-align-center" src="{% static "logo.png" %}" alt="" style="height: 150px; width: auto; margin-top: 20px; margin-bottom: 0px;">
+            </div>
+            <div class="uk-flex uk-flex-center">
+                <div>
+                    <div class="uk-text-large uk-text-bold uk-text-center" style="padding-bottom: 40px;">
+                        Register
+                    </div>
+                    
+                    <form method="post">
+                        {% csrf_token %}
+                        
+                        <input type="text" id="username" name="username" placeholder="Username" style="width: 290px; height: 60px; border-style: none; border-radius: 20px; text-align: center;box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;"><br><br>
+                        <input type="password" id="password1" name="password1" placeholder="Password" style="width: 290px; height: 60px; border-style: none; border-radius: 20px; text-align: center;box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;"><br><br>
+                        <input type="password" id="password2" name="password2" placeholder="Confirm Password" style="width: 290px; height: 60px; border-style: none; border-radius: 20px; text-align: center;box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;"><br><br>
+                        <div class="uk-text-bold uk-text-small">Already have an account? <a href="{% url "login" %}">Login</a></div>
+                        <div class="uk-width-1-1 uk-flex uk-flex-center " style="padding-top: 20px; padding-bottom:20px;">
+                            <button type="submit" class="uk-button-default submitbutton">Register</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+
+            
+        </div>
+    </div>
+    
+
+{% endblock content %}
