--- a/mindme/templates/questionaire.html
+++ b/mindme/templates/questionaire.html
@@ -5,7 +5,7 @@
     <div class="uk-width-1-1" style="display: block; overflow: hidden; height: 100vh; position: relative;">
         <div style="position: absolute; margin-top: 40px; " class="uk-grid">
             <div><img src="{% static 'logo.png'%}" style="height: 55px; margin-left: 5vw;"></div>
-            <div style="padding-top: 15px; color: rgb(123, 0, 96); font-size: 30px;" class="uk-text-bold uk-text-medium hero-font" >MindMe</div>
+            <div style="padding-top: 15px; color: rgb(123, 0, 96); font-size: large;" class="uk-text-bold uk-text-medium hero-font" >MindMe</div>
         </div>
         <div uk-grid class="uk-width-1-1" style="position: absolute;">
             <div class="uk-width-2-3"></div>
@@ -16,7 +16,7 @@
                 <div style="margin: 30px;">
                     <div class="uk-grid">
                         <div class="img-option" >
-                            <img src="{% static 'asthetic.png'%}" alt="" width="100px">
+                            <img src="{% static %}" alt="" width="100px">
                         </div>
                         <div class=" img-option">
                             <img src="{% static 'asthetic.png'%}" alt="" width="100px">
