--- a/mindme/static/style.css
+++ b/mindme/static/style.css
@@ -98,3 +98,11 @@
     height: 150px;
     border-radius: 10px;
 }
+
+.card{
+    background-color: #3F6E97; margin: 10px;width: 300px; height: 300px;border-radius: 50px;display: block; overflow: hidden;padding: 0;
+}
+
+.card:hover{
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
