--- a/mindme/templates/dashboard.html
+++ b/mindme/templates/dashboard.html
@@ -35,18 +35,18 @@
         </div>
         <div uk-grid class="synefont uk-text-bold" style="margin-top: 15px;">
             <div><a href="{% url 'home'%}" class="nav-text">Home</a></div>
-            <div><a href="" class="nav-text">About</a></div>
-            <div>
-                <a href="{% url 'login'%}">
-                    <div class="login">
-                        LOGIN
-                    </div>
-                </a>
-            </div>
         </div>
     </div>
     <div uk-grid style="margin-top: 0px;">
-        <div class="uk-width-2-3">thg</div>
+        <div class="uk-width-2-3 uk-flex uk-flex-center">
+            <div style="margin: 40px;">
+                <div style="padding: 20px; font-size: xx-large; font-weight: bold;" class="synefont">If you can change your mind, you can change your life.</div>
+                <div uk-grid style="margin: 20px; margin-left: 160px;">
+                    <div class="card"><img src="{% static 'game.jpeg'%}" alt=""></div>
+                    <div class="card"><img src="{% static 'music.jpg'%}" alt=""></div>
+                </div>
+            </div>
+        </div>
         <div class="uk-width-1-3 chat-container"  >
             <div class="chat-messages" id="chat-messages"></div>
             <div class="uk-position-bottom-right uk-flex uk-flex-center chat-input-container">
@@ -62,8 +62,23 @@
                 if (message) {
                     displayMessage('User', message);
                     input.value = '';
-                    // Simulate a response from the chatbot
-                    setTimeout(() => displayMessage('Chatbot', 'This is a response from the chatbot.'), 500);
+                    
+                    // Send message to Flask server
+                    fetch('http://localhost:5000/query', {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json'
+                        },
+                        body: JSON.stringify({ text: message })
+                    })
+                    .then(response => response.json())
+                    .then(data => {
+                        // Display response from Flask server
+                        displayMessage('mindme', data.fulfillment);
+                    })
+                    .catch(error => {
+                        console.error('Error:', error);
+                    });
                 }
             }
         }
