--- a/mindme/templates/result.html
+++ b/mindme/templates/result.html
@@ -18,7 +18,7 @@
                 </div>
             </div>
         </div>
-        <img src="{% static background_image %}" alt="" style="margin-top: 40vh;">
+        <img src="{% static 'res_bck.jpeg' %}" alt="" style="margin-top: 40vh;">
     </div>
 </div>
 
