--- a/mindme/templates/home.html
+++ b/mindme/templates/home.html
@@ -4,19 +4,19 @@
 <div style="height: 91vh; background-color: #F9F5EC;">
     <div class="uk-grid" style="background-color: #3F6E97; height: 60px; display: flex; align-items: center;">
         <div class="uk-width-1-3 uk-flex uk-flex-middle">
-            <img src="{% static 'logo.png' %}" alt="MindMe Logo" style="height: 45px; margin-left: 5vw;">
+            <img src="{% static 'mood/logo.png' %}" alt="MindMe Logo" style="height: 45px; margin-left: 5vw;">
             <span style="color: white; font-size: 20px; font-weight: bold; margin-left: 10px;">MindMe</span>
         </div>
         <div class="uk-width-2-3 uk-flex uk-flex-right">
             <a href="{% url 'home' %}" class="nav-text" style="color: white; margin-right: 20px; margin-top: 0.5rem;">Home</a>
-            <a href="#" class="nav-text" style="color: white; margin-right: 20px; margin-top: 0.5rem;">About</a>
+            <a href="{% url 'about' %}" class="nav-text" style="color: white; margin-right: 20px; margin-top: 0.5rem;">About</a>
             <a href="{% url 'login' %}" class="login-btn" style="background-color: #FE8181; color: white; padding: 8px 16px; border-radius: 20px; text-decoration: none; font-weight: bold; margin-right: 20px;">LOGIN</a>
         </div>
     </div>
     <div style="display: flex; align-items: center; justify-content: center; height: calc(100% - 60px);">
         <div style="width: 80%; display: flex; align-items: center; justify-content: space-between;">
             <div>
-                <img src="{% static 'asthetic.png' %}" alt="Artwork" style="height: 400px;">
+                <img src="{% static 'mood/asthetic.png' %}" alt="Artwork" style="height: 400px;">
             </div>
             <div>
                 <h1 style="font-size: 36px; font-weight: bold; color: black;">Embrace Wellness: Your Journey<br> <span style="color: #E06B45;">to Mental Health</span></h1>
